# SysAdminSuite

./: .claudeignore  .gitattributes  .gitignore  .replit  AGENTS.md  Bug Log.md  Bug-Log.md  CHANGELOG.md  CLAUDE.md  CODEBASE_MAP.md  CreateSysAdminSuiteRepo.ps1  Developer-Workstation.cmd  Inspect-LatestAutoLogon.cmd  Inspect-LatestSoftwareInstall.cmd  Inspect-LatestValidatedSoftwareDeployment.cmd  Install-SasOperatorCommand.cmd  LICENSE  Launch-SysAdminSuite-Runtime.bat  Launch-SysAdminSuite.bat  Launch-SysAdminSuiteDashboard.Host.bat  Launch-SysAdminSuiteDashboard.bat  Launch-SysAdminSuiteDashboard.ps1  Launch-WorkstationWezTerm.cmd  Launch-WorkstationWezTerm.ps1  Next plan.md  Prepare-Workstation.cmd  Qualify-AutoLogonSystemPackage.cmd  README.md  Recover-AutoLogonWinRmBlocker.cmd  Run-AutoLogonOnsite.cmd  Run-AutoLogonStateDelta.cmd  Run-BluetoothDriverFlushHelp.cmd  Run-BluetoothTargetRepair.cmd  Run-CybernetBatchConfiguration.cmd  Run-CybernetClientConfiguration.cmd  Run-CybernetComPortAutoFix-DryRun.cmd  Run-CybernetComPortAutoFix.cmd  Run-CybernetComPortHelp.cmd  Run-CybernetComPortQrPack.cmd  Run-CybernetLiveCert.cmd  (+32 more)
.githooks/: pre-commit  pre-push
.github/: temp-p64-trigger.txt  temp-register-p64.py
ActiveDirectory/: Add-Computers-To-PrintingGroup.ps1  hosts.txt
Config/: Build-FetchMap.ps1  Compare-HostInventory.ps1  Fetch-Cycle.ps1  Fetch-DRYRUN.ps1  Fetch-Installers.ps1  GoLiveTools.ps1  ImpactS-Find.ps1  ImpactS-FixShortcuts.ps1  ImpactS-Paths.psd1  Inventory-Software.ps1  NETWORK_GUARD_README.md  Run-Preflight.ps1  Runbook-Compare-Inventory.ps1  Runbook-Inventory.ps1  Stage-To-Clients.ps1  Test-Links.ps1  agent-model-routing-policy.sample.json  ai-provider-catalog.json  approved-subnets.example.json  bashrc-sysadminsuite.sh  cybernet-client-preferences.json  cybernet-naabu-profiles.json  (+22 more)
mapping/native/: CMakeLists.txt  CONTRACT.md  Launch-NativeMappingController.example.bat  README.md
mapping/native/src/common/: json_util.cpp  json_util.hpp  path_util.cpp  path_util.hpp  string_util.cpp  string_util.hpp
mapping/native/src/controller/: ControllerMain.cpp
mapping/native/src/worker/: WorkerMain.cpp  artifacts.cpp  artifacts.hpp  default_printer_task.cpp  default_printer_task.hpp  print_ops.cpp  print_ops.hpp  printers.cpp  printers.hpp  registry_unc.cpp  registry_unc.hpp  result_rows.cpp  result_rows.hpp  run_control.cpp  run_control.hpp
mapping/native/tests/: mapping_common_test.cpp
(+1604 files in other folders)
